...
                                            <constraint firstAttribute="height" constant="50" id="xFA-n8-5ci"/>
                                        </constraints>
                                        <state key="normal" title="Sign in">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Muk-xY-MuV">
                                        <rect key="frame" x="0.0" y="110" width="354" height="50"/>
                                        <state key="normal" title="Create an Account">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <rect key="frame" x="20" y="356" width="374" height="110"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="leading" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oR8-qT-AX3" customClass="CustomTextField" customModule="ParkinSense" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                        <constraints>
...
                                        </variation>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WPp-J7-yNK" customClass="CustomTextField" customModule="ParkinSense" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="60" width="374" height="50"/>
                                        <constraints>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="124" height="40"/>
                                                        <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" image="uncheckbox"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
...
                                        </variation>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UXg-uL-qCR" customClass="CustomTextField" customModule="ParkinSense" customModuleProvider="tar
                                        <rect key="frame" x="0.0" y="118" width="374" height="50"/>
                                        <constraints>
...
                                            <constraint firstAttribute="height" constant="50" id="UDt-DH-dYX"/>
                                        </constraints>
                                        <state key="normal" title="Add New Medication Detail"/>
                                        <connections>
                                            <action selector="addNewMedicationDetailTapped:" destination="y9O-MW-t5g" eventType="touchUpInside" id="rQ3-iG-37T"/>
...
                                            <constraint firstAttribute="height" constant="50" id="lfA-GQ-Hk7"/>
                                        </constraints>
                                        <state key="normal" title="Already have an account? Sign in">
                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <rect key="frame" x="20" y="30" width="374" height="110"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Medication Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ORO-fA-abf">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                        <constraints>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" image="Scircle"/>
                                                <connections>
                                                    <action selector="dateSelectionTapped:" destination="9aV-Wv-vxg" eventType="touchUpInside" id="J8C-KE-0Xe"/>
...
                                                <rect key="frame" x="54" y="0.0" width="49.5" height="50"/>
                                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" image="Mcircle"/>
                                                <connections>
                                                    <action selector="dateSelectionTapped:" destination="9aV-Wv-vxg" eventType="touchUpInside" id="qdI-yS-a1T"/>
...
                                                <rect key="frame" x="108.5" y="0.0" width="49" height="50"/>
                                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" image="Tcircle"/>
                                                <connections>
                                                    <action selector="dateSelectionTapped:" destination="9aV-Wv-vxg" eventType="touchUpInside" id="keH-np-LcH"/>
...
                                                <rect key="frame" x="162.5" y="0.0" width="49" height="50"/>
                                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" image="Wcircle"/>
                                                <connections>
                                                    <action selector="dateSelectionTapped:" destination="9aV-Wv-vxg" eventType="touchUpInside" id="H0l-nn-CmR"/>
...
                                        </constraints>
