...
        ])
        
        // Medication UI Label
        let medicationLabelHeight: CGFloat = 20
        medicationLabel.textColor = textColour
        medicationLabel.textAlignment = .left
        medicationLabel.text = "Medication Name/ID"
        medicationLabel.numberOfLines = 1
        medicationLabel.font = UIFont.systemFont(ofSize: medicationLabelHeight, weight: .regular)
        medicationLabel.adjustsFontSizeToFitWidth = true
        medicationLabel.minimumScaleFactor = 0.5
        medicationLabel.translatesAutoresizingMaskIntoConstraints = false
        self.view.addSubview(medicationLabel)
...
        ])
        
        // Medication Day UI Label
        let medicationDayLabelHeight: CGFloat = 20
        medicationDayLabel.textColor = textColour
        medicationDayLabel.textAlignment = .left
        medicationDayLabel.text = "Medication Dates"
        medicationDayLabel.numberOfLines = 1
        medicationDayLabel.font = UIFont.systemFont(ofSize: medicationDayLabelHeight, weight: .regular)
        medicationDayLabel.adjustsFontSizeToFitWidth = true
        medicationDayLabel.minimumScaleFactor = 0.5
        medicationDayLabel.translatesAutoresizingMaskIntoConstraints = false
        self.view.addSubview(medicationDayLabel)
...
        ])
        
        // Medication Time UI Label
        let medicationTimeLabelHeight: CGFloat = 20
        medicationTimeLabel.textColor = textColour
        medicationTimeLabel.textAlignment = .left
        medicationTimeLabel.text = "Medication Times"
        medicationTimeLabel.numberOfLines = 1
        medicationTimeLabel.font = UIFont.systemFont(ofSize: medicationTimeLabelHeight, weight: .regular)
        medicationTimeLabel.adjustsFontSizeToFitWidth = true
        medicationTimeLabel.minimumScaleFactor = 0.5
        medicationTimeLabel.translatesAutoresizingMaskIntoConstraints = false
        self.view.addSubview(medicationTimeLabel)
...
