...
    let appImageView: UIImageView = {
        let imageView = UIImageView(image: appImage!)   // Creates view for image
        Utilities.styleImageView(imageView)             // Styles to view
        return imageView
    }()
    
    // App UI Label for "PARKINSENSE"
    let appLabel: UILabel = {
        let label = UILabel()
        Utilities.styleUILabel(label, error: false) // Style label
        label.text = "PARKINSENSE"  // Set label text
        label.font = UIFont.systemFont(ofSize: appLabelHeight, weight: .light)  // Set label font
        return label
...
